--- a/Tic Tac Toe game.ipynb
+++ b/Tic Tac Toe game.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,60 +57,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_input():\n",
-    "    mark_X = 'X'\n",
-    "    mark_O = 'O'\n",
-    "    inp = ''\n",
-    "    \n",
-    "    while True:\n",
-    "        inp = input('\\nPlayer 1, Enter your marker \"X / O\" : ').upper()\n",
-    "        \n",
-    "        if(inp == 'X'):\n",
-    "            print('\\nPlayer1 assigned the marker as: ',inp)\n",
-    "            print('\\nPlayer2, your marker is: ',mark_O)\n",
-    "            break\n",
-    "            \n",
-    "        elif(inp == 'O'):\n",
-    "            print('\\nPlayer1 assigned the marker as: ',inp)\n",
-    "            print('\\nPlayer2, your marker is: ',mark_X)\n",
-    "            break\n",
-    "            \n",
-    "        else:\n",
-    "            print('\\nPlease input the correct value !!')\n",
-    "            \n",
-    "            \n",
-    "        "
+    "#def player_input():\n",
+    " #   mark_X = 'X'\n",
+    "  #  mark_O = 'O'\n",
+    "   # inp = ''\n",
+    "    #\n",
+    "#    while True:\n",
+    "#        inp = input('\\nPlayer 1, Enter your marker \"X / O\" : ').upper()\n",
+    "#        \n",
+    "#        if(inp == 'X'):\n",
+    "#            print('\\nPlayer1 assigned the marker as: ',inp)\n",
+    "#           print('\\nPlayer2, your marker is: ',mark_O)\n",
+    "#            break\n",
+    "#            \n",
+    "#        elif(inp == 'O'):\n",
+    "#            print('\\nPlayer1 assigned the marker as: ',inp)\n",
+    "#            print('\\nPlayer2, your marker is: ',mark_X)\n",
+    "#            break\n",
+    "#            \n",
+    "#        else:\n",
+    "#            print('\\nPlease input the correct value !!')\n",
+    "#            \n",
+    "#            \n",
+    "#    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Player 1, Enter your marker \"X / O\" : x\n",
-      "\n",
-      "Player1 assigned the marker as:  X\n",
-      "\n",
-      "Player2, your marker is:  O\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "player_input()"
+    "#player_input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1: Do you want to be X or O? h\n",
-      "Player 1: Do you want to be X or O? x\n"
+      "Player 1: Do you want to be X or O? N\n",
+      "Player 1: Do you want to be X or O? X\n"
      ]
     },
     {
@@ -146,7 +133,7 @@
        "('X', 'O')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +262,192 @@
    "metadata": {},
    "source": [
     "**Step 5: Write a function that uses the random module to randomly decide which player goes first. You may want to lookup random.randint() Return a string of which player went first.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def choose_first():\n",
+    "    if(random.randint(0,1) == 0):\n",
+    "        return 'Player 1'\n",
+    "    else:\n",
+    "        return 'Player 2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Player 1'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "choose_first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 6: Write a function that returns a boolean indicating whether a space on the board is freely available.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def space_check(board, position):\n",
+    "    \n",
+    "        if(board[position-1] == ' ' or board[position-1] == ''):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space_check(['','2','3 ','4','5','6','7','8','9'],1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 7: Write a function that checks if the board is full and returns a boolean value. True if full, False otherwise.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def full_board_check(board):\n",
+    "    item=0\n",
+    "    flag=0\n",
+    "    while (item<9):\n",
+    "        if((board[item]=='') or (board[item]== ' ')):\n",
+    "            flag=1\n",
+    "            break\n",
+    "        else:\n",
+    "            item+=1\n",
+    "                        \n",
+    "    if(flag==1):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_board_check(['1','2','3','r','5','6','7','8',' '])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def full_board_check(board):\n",
+    "#    for i in range(1,10):\n",
+    "#        if (space_check(board, i) == False):\n",
+    "#            return False\n",
+    "#    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_board_check(['1','2','3','r','5','6','7','8',' '])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 8: Write a function that asks for a player's next position (as a number 1-9) and then uses the function from step 6 to check if its a free position. If it is, then return the position for later use.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def player_choice(board):\n",
+    "    position = 0\n",
+    "    \n",
+    "    while position not in [1,2,3,4,5,6,7,8,9] or not space_check(board, position):\n",
+    "        position = int(input('Choose your next position: (1-9) '))\n",
+    "        \n",
+    "    return position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose your next position: (1-9) 5\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'space_check' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-700339ae66c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplayer_choice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'1'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'2'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'3'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'4'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'5'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'7'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'8'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'9'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-da110bbb0bc1>\u001b[0m in \u001b[0;36mplayer_choice\u001b[1;34m(board)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mposition\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mwhile\u001b[0m \u001b[0mposition\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mspace_check\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mboard\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mposition\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mposition\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Choose your next position: (1-9) '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'space_check' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "player_choice(['1','2','3','4','5','','7','8','9'])"
    ]
   },
   {
