--- a/Tic Tac Toe game.ipynb
+++ b/Tic Tac Toe game.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,10 +423,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def player_ch(board):\n",
+    "    posit = 0\n",
+    "    #flag = 0\n",
+    "    \n",
+    "    posit = int(input('Enter the position [1-9]: '))\n",
+    "    \n",
+    "    while True:#not (posit not in range(1,9)):\n",
+    "        \n",
+    "        if(posit not in range(1,10)):\n",
+    "                print('Position out of range!!')\n",
+    "                posit = int(input('Enter the position [1-9]: '))\n",
+    "                continue\n",
+    "        \n",
+    "        while not(space_check(board, posit)):\n",
+    "                \n",
+    "          #  if(posit not in range(1,9)):\n",
+    "            #    print('Position out of range!!')\n",
+    "            #    posit = int(input('Enter the position [1-9]: '))\n",
+    "            #    continue\n",
+    "        \n",
+    "            #else:\n",
+    "                print('The position is not empty!!')\n",
+    "                posit = int(input('Enter the position [1-9]: '))\n",
+    "            \n",
+    "        else:#(space_check(board, posit == True)):\n",
+    "           return posit\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the position [1-9]: 10\n",
+      "Position out of range!!\n",
+      "Enter the position [1-9]: 1\n",
+      "The position is not empty!!\n",
+      "Enter the position [1-9]: 0\n",
+      "The position is not empty!!\n",
+      "Enter the position [1-9]: 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_ch(['1','2','3','4','5','','7','8','9'])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -442,6 +503,13 @@
     "        \n",
     "    return position"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -470,6 +538,70 @@
    ],
    "source": [
     "player_choice(['1','2','3','4','5','','7','8','9'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 9: Write a function that asks the player if they want to play again and returns a boolean True if they do want to play again.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replay():\n",
+    "    choice = ''\n",
+    "    \n",
+    "    choice = input('Do you want to play again? [Y/N]: ').upper()\n",
+    "    \n",
+    "    while not (choice == 'Y' or choice == 'N'):\n",
+    "         choice = input('Enter correct choice: [Y/N]: ').upper()\n",
+    "        \n",
+    "    \n",
+    "    if(choice == 'Y'):\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you want to play again? [Y/N]: yes\n",
+      "Enter correct choice: [Y/N]: y\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "replay()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 10: Here comes the hard part! Use while loops and the functions you've made to run the game!**"
    ]
   },
   {
